{
    "name": "InputActionnsMouse",
    "maps": [
        {
            "name": "Movment",
            "id": "d663c397-7573-4132-91a2-9b10283d9433",
            "actions": [
                {
                    "name": "HouseMovment",
                    "type": "Value",
                    "id": "3e290a3f-c7c4-45b2-bcea-cdfbf3f69868",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "CameraMovment",
                    "type": "Value",
                    "id": "0da435ea-d152-4beb-86aa-053ce0bb159c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "KeyDetect",
                    "type": "Button",
                    "id": "77624c91-3b9d-46f6-be90-b44012a43ba5",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "CameraMovment",
                    "id": "bb364fce-c581-4885-82c8-b7246346d606",
                    "path": "3DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraMovment",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Up",
                    "id": "373f29b9-63bd-4704-b8f2-fcce44440891",
                    "path": "<Mouse>/scroll/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraMovment",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Down",
                    "id": "25a13ca6-5773-4ac3-83d1-35f8cdd2b5ee",
                    "path": "<Mouse>/scroll/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraMovment",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "857476ae-c94d-46ea-a69b-6c37077a47ce",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraMovment",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b5d44e4e-c3e1-4b6f-8a58-51f067ad7ce4",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KeyDetect",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e2029576-7827-4635-992c-b2b316bc89af",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KeyDetect",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4f494cac-6831-4b9b-8c66-3ba0d8c21cf0",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KeyDetect",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2052ffbe-4020-4bc8-821a-35a3e7cd50c7",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HouseMovment",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}